[package]
name = "dmxvideo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artnet_protocol = { git = "https://github.com/Nullreff/artnet_protocol.git" }
bevy = "0.11.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
